# onca

./: .gitignore  LICENSE  README.md
.github/workflows/: site.yml
crates/onca-core/: Cargo.toml
crates/onca-core/src/: lib.rs  mesh.rs  pubkey.rs  shape.rs  tx.rs
crates/solana-core/: Cargo.toml
crates/solana-core/src/: error.rs  lib.rs  pubkey.rs  rpc.rs  shape.rs
docs/: custody.md  install.md  wasm-notes.md  writing-style.md
plugins/depin-attest/: Cargo.toml  README.md  manifest.toml
plugins/depin-attest/examples/: bridge.rs  mock-readings.txt
plugins/depin-attest/firmware/onca-dht11/: onca-dht11.ino
plugins/depin-attest/src/: attest.rs  lib.rs
plugins/depin-attest/tests/: attest.rs
plugins/mesh-oracle/: Cargo.toml  manifest.toml
plugins/mesh-oracle/src/: lib.rs  oracle.rs
plugins/payment-watch/: Cargo.toml  README.md  manifest.toml
plugins/payment-watch/src/: lib.rs  watch.rs
plugins/payment-watch/tests/: watch.rs
plugins/solana-pay-request/: Cargo.toml  README.md  manifest.toml
plugins/solana-pay-request/src/: lib.rs  pay.rs
plugins/solana-pay-request/tests/: pay.rs
plugins/token-risk-check/: Cargo.toml  README.md
plugins/token-risk-check/src/: lib.rs  risk.rs
plugins/token-risk-check/tests/: risk.rs
showcase/: SETUP.md  SHOWCASE.md  config.example.toml
site/: .gitignore  README.md  brand.md  next.config.ts  package.json
site/scripts/: generate-og.mjs
site/src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
site/src/app/docs/: page.tsx
site/src/components/: agent-card.tsx  github-icon.tsx  hero-field.tsx  logo.tsx  motion.tsx  sections.tsx  site-footer.tsx  site-nav.tsx  theme-provider.tsx  theme-toggle.tsx
site/src/lib/: utils.ts
tools/onca-oracle/: Cargo.toml
tools/onca-oracle/src/: main.rs
tools/onca-signer/: Cargo.toml
tools/onca-signer/src/: main.rs
